# restic-configurator-py

./: .gitignore  README.md  TODOS.md  pyproject.toml  validate.py
.run/: backup mac cloudflare.run.xml  pytest.run.xml  rcy.run.xml  ruff check --fix.run.xml  ruff format.run.xml  tests.run.xml  validate.run.xml
src/: cli.py  commons.py  constants.py  rcy_logging.py  rcy_system_configuration.py  restic_backup.py  restic_ops.py  utils.py
src/deprecated/: load_result.py
src/restic_configurator_py/: __init__.py  cli.py  commons.py  constants.py  example.config.secrets.toml  execute.py  load_args.py  network.py  rcy_logging.py  rcy_system_configuration.py  restic.py  restic_backup.py  restic_forget.py  restic_ops.py  utils.py
src/restic_configurator_py/cli/: cli.py  click_extensions.py  lazy_group.py  rcy_console.py
src/restic_configurator_py/cli/commands/: backup.py  check.py  dev.py  forget.py  get-password.py  list.py  ls.py  ops.py  prune.py  repair.py  restore.py  snapshots.py  stats.py  stub.py  unlock.py  version.py
src/restic_configurator_py/pydantic_commands/: restic_backup_subcommand.py
src/restic_configurator_py/restic_operations/: execute.py  restic_backup.py  restic_check.py  restic_forget.py  restic_ops.py  restic_unlock.py
systems/: example.config.secrets.toml  example.config.toml  exclude-patterns.txt
systems/example-system/: config.json  files.txt
tests/: test_cli.py  test_commands.py  test_lazy_group.py  test_system_configuration.py
tests/data/: invalid_config.json
