[project]
name = "restic-configurator-py"
version = "0.1.0"
description = "Wrapper for restic, written in Python."
readme = "README.md"
authors = [
    { name = "Jan-Magnus Monenschein", email = "mail@janmagnus.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "ruff>=0.15.16",
]

[project.scripts]
restic-configurator-py = "restic_configurator_py.cli:main"
rcy = "restic_configurator_py.cli.cli:main"

[[tool.uv.index]]
url = "https://pypi.python.org/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

