[project]
name = "restic-configurator-py"
version = "0.1.0"
description = "Wrapper for restic, written in Python."
readme = "README.md"
authors = [
    { name = "Jan-Magnus Monenschein", email = "mail@janmagnus.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "attrs>=26.1.0",
    "click>=8.4.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "ruff>=0.15.16",
    "typing-extensions>=4.15.0",
]

[project.scripts]
restic-configurator-py = "restic_configurator_py.cli:main"
rcy = "restic_configurator_py.cli.cli:main"

[[tool.uv.index]]
url = "https://pypi.python.org/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.ruff.lint]
extend-select = ["F401"]
extend-safe-fixes = ["F401"]


[tool.hatch.build.targets.wheel]
packages = ["src/restic_configurator_py"]

[tool.hatch.build.targets.wheel.force-include]
"src/restic_configurator_py/example.config.toml" = "systems/example.config.toml"
"src/restic_configurator_py/example.config.secrets.toml" = "systems/example.config.secrets.toml"

# mirror it for sdist too, so building from source works the same way
[tool.hatch.build.targets.sdist.force-include]
"src/restic_configurator_py/example.config.toml" = "systems/example.config.toml"
"src/restic_configurator_py/example.config.secrets.toml" = "systems/example.config.secrets.toml"